# MTOS

./: .gitignore  CMakeLists.txt  DEPLOYMENT_GUIDE.md  Dockerfile  LICENSE  Makefile  README.md  README_TEST_FRAMEWORK.md  STUDENT_GUIDE.md  build.py  demo_virtual_interfaces.py  deploy.py  setup_tests.py  showcase_implementations.py  smoke_test.py  test_all.py  test_unix.sh  test_windows.bat
.github/workflows/: multi-platform-ci.yml  test.yml
boot/: boot.S  boot.ld  main.c
include/: README.md  README.txt  elf.h  mmu.h  mtu.h  types.h  x86.h
kernel/interfaces/: kernel_interfaces.c  kernel_interfaces.h
kernel/ipc/: ipc_mechanisms.h  message_queue_ipc.c  shared_memory_ipc.c
kernel/memory/: allocators.h  bitmap_allocator.c  buddy_allocator.c
kernel/scheduler/: priority_scheduler.c  round_robin_scheduler.c  schedulers.h
tests/: README.md  compare_components.py  run_tests.py  test_boot.py  test_config.py  test_integration.py  test_memory.py  validate_tests.py
userspace/: Cargo.toml
userspace/calculator/: Cargo.toml
userspace/calculator/src/: main.rs
userspace/hello/: Cargo.toml
userspace/hello/src/: main.rs
userspace/runtime/: Cargo.toml
userspace/runtime/src/: lib.rs
userspace/shell/: Cargo.toml
userspace/shell/src/: main.rs
